<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>ch.scaille</groupId>
		<artifactId>libs</artifactId>
		<version>0.0.1-SNAPSHOT</version>
		<relativePath>../skylib-java/pom.xml</relativePath>
	</parent>
	<groupId>ch.scaille.tcwriter</groupId>
	<artifactId>testcase-writer</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<modules>
		<module>api</module>
		<module>core</module>
		<module>javatc</module>
		<module>gui</module>
		<module>gui-it</module>
		<module>examples</module>
		<module>webapp</module>
	</modules>
	<properties>
		<aspectj.version>1.9.19</aspectj.version>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<sonar.exclusions>**/node_modules/**,**/generated/**</sonar.exclusions>
	</properties>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>aspectj-maven-plugin</artifactId>
					<version>1.14.0</version>
					<configuration>
						<source>${maven.compiler.source}</source>
						<target>${maven.compiler.target}</target>
						<complianceLevel>${maven.compiler.source}</complianceLevel>
						<encoding>${project.build.sourceEncoding}</encoding>
						<Xlint>ignore</Xlint>
						<aspectLibraries>
							<aspectLibrary>
								<groupId>ch.scaille.tcwriter</groupId>
								<artifactId>testcase-writer-javatc</artifactId>
							</aspectLibrary>
						</aspectLibraries>
						<verbose>true</verbose>
					</configuration>
					<executions>
						<execution>
							<!-- IMPORTANT -->
							<phase>process-sources</phase>
							<goals>
								<goal>compile</goal>
								<goal>test-compile</goal>
							</goals>
						</execution>
					</executions>
					<dependencies>
						<dependency>
							<groupId>org.aspectj</groupId>
							<artifactId>aspectjtools</artifactId>
							<version>${aspectj.version}</version>
						</dependency>
					</dependencies>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<useIncrementalCompilation>false</useIncrementalCompilation>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>ch.scaille.tcwriter</groupId>
				<artifactId>testcase-writer-api</artifactId>
				<version>0.0.1-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>ch.scaille.tcwriter</groupId>
				<artifactId>testcase-writer-javatc</artifactId>
				<version>0.0.1-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>ch.scaille.tcwriter</groupId>
				<artifactId>testcase-writer-core</artifactId>
				<version>0.0.1-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>ch.scaille.tcwriter</groupId>
				<artifactId>testcase-writer-gui</artifactId>
				<version>0.0.1-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>ch.scaille.tcwriter</groupId>
				<artifactId>testcase-writer-examples</artifactId>
				<version>0.0.1-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>org.aspectj</groupId>
				<artifactId>aspectjweaver</artifactId>
				<version>${aspectj.version}</version>
			</dependency>
			<dependency>
				<groupId>org.aspectj</groupId>
				<artifactId>aspectjrt</artifactId>
				<version>${aspectj.version}</version>
			</dependency>
			<dependency>
				<groupId>org.aspectj</groupId>
				<artifactId>aspectjtools</artifactId>
				<version>${aspectj.version}</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>31.1-jre</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>ch.scaille</groupId>
			<artifactId>lib-testing-core</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<profiles>
		<profile>
			<id>sonar</id>
			<properties>
				<sonar.projectName>testcase-writer</sonar.projectName>
			</properties>
		</profile>
	</profiles>
</project>
